res/css/default.css
:root {
  --background-color: #F0F0F0;
  --header-background-color: #D2D2D2;
  --text-color: #333333;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background-color: #181819;
    --header-background-color: #1E1E20;
    --text-color: #b0b0b0;
  }
}

* {
  font-family: Verdana, Arial, sans-serif;
  font-weight: 300;
  letter-spacing: 0.02em;
}

footer {
  margin: 0px;
  background-color: var(--background-color);
  color: var(--text-color);
}

body {
  text-align: center;
  margin: 0px;
  background-color: var(--background-color);
  color: var(--text-color);
}

header {
  padding-top: 1em;
  padding-bottom: 1em;
  font-size: 3em;
  background-color: var(--header-background-color);
  color: var(--text-color);
}

div .body {
  margin: 1em;
}

a {
  /*border for fancy underline*/
  border-style: hidden hidden solid hidden;
  border-color: rgb(0, 125, 151);

  /*remove original underline*/
  text-decoration: none;
  font-weight: 600;
  color: var(--text-color);
}

a:visited {
  border-color: rgb(125, 49, 134);
}

p {
  font-size: 1.5em;
}

pre {
  font-size: 1.5em;
}

